# camping_review_self

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
sparta/: __init__.py
sparta/templates/camping/: index.html
sparta/views/: main.py
tests/: conftest.py
tests/views/: test_main.py
