[tool.poetry]
name = "camping_review_self"
version = "0.1.0"
description = ""
authors = ["diligejy <sjy049@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
pymongo = "^3.11.4"
bs4 = "^0.0.1"
PyJWT = "^2.1.0"
pytest = "^6.2.4"
pytest-flask = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
